# pymixter

./: .gitignore  README.md  main.py  pyproject.toml
pymixter/cli/: main.py
pymixter/core/: __init__.py  analysis.py  automix.py  history.py  mixer.py  player.py  project.py  recent.py  rekordbox_xml.py  stems.py
pymixter/mcp/: __init__.py  __main__.py  server.py
pymixter/tui/: app.py
pymixter/tui/widgets/: command_console.py  fuzzy_finder.py  library.py  timeline.py  track_info.py  transition_zoom.py  utils.py
tests/: test_bpm_edit.py  test_history.py  test_integration.py  test_mcp.py  test_player_deckb.py  test_precision.py  test_project.py  test_screenshot.py  test_timeline_reindex.py  test_transition_preview.py  test_tui.py  test_waveform_pack.py
web/templates/: app_index.html
