[project]
name = "pymixter"
version = "0.1.0"
description = "DJ Mix Studio — terminal-based DJ mixing environment"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "audio-separator>=0.41.1",
    "essentia>=2.1b6.dev1389",
    "onnxruntime>=1.24.3",
    "pedalboard>=0.9.22",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sounddevice>=0.5.5",
    "textual>=8.1.1",
]
